# rag-app

./: README.md  main.py  pyproject.toml  settings.toml
src/: config.py
src/api/: __init__.py  db.py  file.py  llm.py  model.py  search.py
src/core/: db.py  doc.py  file.py  model.py
src/parser/: db.py  file.py  model.py  search.py
